# NavierStokes-parallel

./: CMakeLists.txt  README.md  block_size_comparison.csv  colab-runner.ipynb  get_time.sh  parallel.1 (1).out  parallel.1.out  run.sh  run_parallel_block_tests.sh  run_serial.sh  serial_time.csv  speedup.csv  teste paralelo
src/openmp/: integration.c  io.c  io.h  main.c
src/parallel/: boundaries.cu  boundaries.h  cuda_kernels.cu  cuda_kernels.h  integration.cu  integration.h  io.cu  io.h  kernel.cu  kernel.h  main.cu  memory.cu  memory.h  utils.cu  utils.h
src/serial/: boundaries.c  integration.c  io.c  main.c  memory.c
tests/: 1.in  2.in  3.in  4.in  5.in
